cabal-version:      3.0
name:               yampa-wasm-example
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             AntanasKal
maintainer:         a.kalkauskas@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

executable wasm-yampa-reactor
    import:           warnings
    main-is:          Game.hs
    build-depends:    base >= 4.16.0.0
                    , Yampa >= 0.14.5
                    , bytestring


    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wunused-packages
        -no-hs-main
        -optl-mexec-model=reactor
        "-optl-Wl,--export=hs_init,--export=runStep,--export=getOutX,--export=getOutY,--export=malloc,--export=free,--export=reverseCharArray"
        -o dist/core-game.wasm