cabal-version:      3.0
name:               yampa-wasm-example
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             AntanasKal
maintainer:         a.kalkauskas@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

executable game-core
    import:           warnings
    main-is:          Game.hs
    build-depends:    base >= 4.16.0.0
                    , Yampa >= 0.14.5
                    , bytestring


    default-language: Haskell2010
    c-sources:        cbits/main.c
    include-dirs:     cbits
    hs-source-dirs:   src
    ghc-options:
        -Wall
        -Wunused-packages
        -no-hs-main
        -optl-mexec-model=reactor
        "-optl-Wl,--export=hs_init,--export=runGameStep,--export=renderGame,--export=getOutX,--export=getOutY,--export=malloc,--export=free,--export=reverseCharArray"
